; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_cmd.c_alloc_ent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_cmd.c_alloc_ent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_cmd = type { i32, i32, i32 }

@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx5_cmd*)* @alloc_ent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alloc_ent(%struct.mlx5_cmd* %0) #0 {
  %2 = alloca %struct.mlx5_cmd*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.mlx5_cmd* %0, %struct.mlx5_cmd** %2, align 8
  %5 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %6 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %5, i32 0, i32 1
  %7 = load i64, i64* %3, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %10 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %9, i32 0, i32 2
  %11 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %12 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @find_first_bit(i32* %10, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %17 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp slt i32 %15, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %1
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %23 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %22, i32 0, i32 2
  %24 = call i32 @clear_bit(i32 %21, i32* %23)
  br label %25

25:                                               ; preds = %20, %1
  %26 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %27 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %26, i32 0, i32 1
  %28 = load i64, i64* %3, align 8
  %29 = call i32 @spin_unlock_irqrestore(i32* %27, i64 %28)
  %30 = load i32, i32* %4, align 4
  %31 = load %struct.mlx5_cmd*, %struct.mlx5_cmd** %2, align 8
  %32 = getelementptr inbounds %struct.mlx5_cmd, %struct.mlx5_cmd* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = icmp slt i32 %30, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %25
  %36 = load i32, i32* %4, align 4
  br label %40

37:                                               ; preds = %25
  %38 = load i32, i32* @ENOMEM, align 4
  %39 = sub nsw i32 0, %38
  br label %40

40:                                               ; preds = %37, %35
  %41 = phi i32 [ %36, %35 ], [ %39, %37 ]
  ret i32 %41
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @find_first_bit(i32*, i32) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
